解决变为1.8的报错问题